--- a/Animation-2/index.html
+++ b/Animation-2/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div class="main">
-        <div class="box"></div>
-        
+      <div class="circle">
+        <div class="wings one"> </div>
+        <div class="wings three"> </div>
+
+        <div class="wings four"> </div>
+        <div class="wings two"> </div>
+      </div>
+    </div>
   </body>
 </html>
